[package]
name = "atrofac-gui"
version = "0.1.0"
authors = ["caelis <simon.ruoss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
atrofac-libgui = {path = "../libgui"}
atrofac-library = {path = "../library"}

