[package]
name = "atrofac-libgui"
version = "0.1.0"
authors = ["caelis <simon.ruoss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
atrofac-library = {path = "../library"}
serde = {version = "1.0", features = ["derive", "rc"] }
dirs = "2.0"
serde_yaml = "0.8"
indexmap = "1.3"
msgbox = "0.4.0"
flexi_logger = { version = "0.15", features = ["specfile", "ziplogs"] }

# things required for systray
[target.'cfg(windows)'.dependencies]
libc="0.2"
encoding="0.2.33"
winapi = { version = "0.3", features = ["winuser", "minwinbase", "basetsd"] }

